src/objects/NyukinKeshikomiLink__c.object
<CustomObject>
    <fields>
        <fullName>Biko__c</fullName>
        <formula>TEXT( NyukinData__r.NyukinBi__c ) 

+ &quot;　ご入金の　&quot; +

 TEXT( NyukinData__r.NyukinGaku__c ) 

+ &quot;円　から　&quot; +

 TEXT( KeshikomiKingaku__c ) 

+ &quot;円　を充当済。&quot;</formula>
        <label>備考</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JutoSakiSeikyu__c</fullName>
        <formula>KeshikomiData__r.UrikakeData__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>充当先請求</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeshikomiData__c</fullName>
        <label>消込値引データ</label>
        <referenceTo>KeshikomiData__c</referenceTo>
        <relationshipName>KeshikomiDatas</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>KeshikomiKingakuNamachi__c</fullName>
        <label>￥￥_消込入金額生値</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KeshikomiKingaku__c</fullName>
        <formula>KeshikomiData__r.KeshikomiKingaku__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥￥_消込入金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KeshikomiMikakuteiSuNamachi__c</fullName>
        <label>￥￥_消込未確定数生値</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KeshikomiMikakuteiSu__c</fullName>
        <description>不明入金データに未確定数を積み上げ集計する際に使用。</description>
        <formula>IF (
 ISBLANK( KeshikomiData__r.KeshikomiKakuninBi__c ),  
 1,
 null
)</formula>
        <inlineHelpText>消込値引データ　の　消込確認日　が未入力済の場合「1」。
充当されている消込値引データが確認されていない場合「1」。</inlineHelpText>
        <label>￥￥_消込未確定数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NyukinData__c</fullName>
        <label>入金データ</label>
        <referenceTo>NyukinData__c</referenceTo>
        <relationshipName>NyukinDatas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>入金充当リンク</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>KeshikomiData__c</columns>
        <columns>NyukinData__c</columns>
        <columns>Biko__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>入金充当-{0000000000}</displayFormat>
        <label>入金充当名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>